[package]
name = "rustvm"
version = "0.1.0"
authors = ["Guillaume Dore <corwin@poussif.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"kvm" = "0.2.0"
"memmap" = "*"
"libc" = "*"

[replace]
"kvm:0.2.0" = { git = "https://github.com/Corwind/kvm.git" }
